# doublecontact

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO  all.pro  build.out-of-tree  build.out-of-tree.example  build_win_release.bat  build_win_release_qt486_mgw_example.bat
app/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  callwindow.cpp  callwindow.h  callwindow.ui  comparecontainers.cpp  comparecontainers.h  comparedialog.cpp  comparedialog.h  contactdialog.cpp  contactdialog.h  contactdialog.ui  csvprofiledialog.cpp  csvprofiledialog.h  csvprofiledialog.ui  datedetailsdialog.cpp  datedetailsdialog.h  datedetailsdialog.ui  doublecontact.desktop  doublecontact.pro  doublecontact.qrc  doublecontact.rc  groupdialog.cpp  groupdialog.h  groupdialog.ui  helpers.cpp  helpers.h  innerfilewindow.cpp  innerfilewindow.h  innerfilewindow.ui  languageselectdialog.h  languageselectdialog.ui  logwindow.cpp  logwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+15 more)
cmake/modules/: Findlibzip.cmake
contconv/: CMakeLists.txt  README.md  consoleasyncui.cpp  consoleasyncui.h  contconv.pro  convertor.cpp  convertor.h  main.cpp
core/: CMakeLists.txt  bstring.cpp  bstring.h  contactlist.cpp  contactlist.h  contactmodel.cpp  contactmodel.h  contactsorterfilter.cpp  core.pri  corehelpers.cpp  corehelpers.h  decodedmessagelist.cpp  decodedmessagelist.h  extra.cpp  extra.h  globals.cpp  globals.h  languagemanager.cpp  languagemanager.h
core/formats/: formatfactory.cpp  formatfactory.h  iformat.h
core/formats/common/: nokiadata.cpp  nokiadata.h  pdu.cpp  pdu.h  quotedprintable.cpp  quotedprintable.h  textreport.cpp  textreport.h  vcarddata.cpp  vcarddata.h  vdata.cpp  vdata.h  vmessagedata.cpp  vmessagedata.h
core/formats/files/: csvfile.cpp  csvfile.h  csvproiles.cpp  csvproiles.h  fileformat.cpp  fileformat.h  htmlfile.cpp  htmlfile.h  mpbfile.cpp  mpbfile.h  nbffile.cpp  nbffile.h  nbufile.cpp  nbufile.h  udxfile.cpp  udxfile.h  vcfdirectory.cpp  vcfdirectory.h  vcffile.cpp  vcffile.h  xmlcontactfile.cpp  xmlcontactfile.h
core/formats/network/: asyncformat.cpp  asyncformat.h  carddavformat.cpp  carddavformat.h  imageloader.cpp  imageloader.h
core/formats/profiles/: csvprofilebase.cpp  csvprofilebase.h  explaybm50profile.cpp  explaybm50profile.h  explaytv240profile.cpp  explaytv240profile.h  genericcsvprofile.cpp  genericcsvprofile.h  osmoprofile.cpp  osmoprofile.h  sylpheedprofile.cpp  sylpheedprofile.h
doc/: BUILD.en.md  changelog  changelog.rus  csvprofiles.en.md  manual.en.md  manual.rus.md  tech_details.rus.md
doc/build-samples/: build-qt-stat-512  buildstat-486.bat  buildstat-510.bat
gui/: configmanager.cpp  configmanager.h  gui.pri  recentlist.cpp
img/: CMakeLists.txt  README.icons
img/32x32/: doublecontact_32x32.xpm
img/multi/: doublecontact.icns
model/: CMakeLists.txt  callmodel.cpp  callmodel.h  configmanager.cpp  configmanager.h  contactmodel.cpp  contactmodel.h  contactsorterfilter.cpp  innerfilemodel.cpp  innerfilemodel.h  messagemodel.cpp  messagemodel.h  model.pri  modelhelpers.cpp  modelhelpers.h  recentlist.cpp  recentlist.h
pack/: make-bin-current.bat  make-bin-image  make-bin-image.bat
pack/ann/: README.ann  md2any
pack/appimage/: AppRun  README  doublecontact.appdata.xml  make-appimage
pack/deb/: control-qt5  make-deb-pkg  make-debianized-src
pack/deb/DEBIAN/: control  copyright  docs  menu.ex
pack/dmg/: Info.plist  make-dmg-pkg
pack/exe/: doublecontact.iss  make-exe-pkg.bat  make-exe-pkg.sample.bat
pack/msi/: make-msi-pkg.bat
pack/rpm/: doublecontact.spec  make-rpm-pkg
pack/txz/: make-txz-pkg  remove-doublecontact-root-build
pack/zip/: doublecontact.ini  make-zip-pkg.sample.bat
src/: aboutdialog.cpp  aboutdialog.ui  comparecontainers.cpp  comparecontainers.h  comparedialog.cpp  comparedialog.h  comparedialog.ui  contactdialog.cpp  contactdialog.h  contactdialog.ui  contactlist.cpp  contactlist.h  contactmodel.cpp  contactmodel.h  contactsorterfilter.h  datedetailsdialog.cpp  datedetailsdialog.ui  doublecontact.pro  doublecontact.qrc  globals.cpp  globals.h  languagemanager.cpp  languagemanager.h  languageselectdialog.cpp  languageselectdialog.h  logwindow.cpp  logwindow.h  logwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multicontactdialog.h  multicontactdialog.ui  phonetypedialog.cpp  phonetypedialog.h  phonetypedialog.ui  recentlist.h  settingsdialog.cpp  settingsdialog.h  (+1 more)
src/formats/: formatfactory.cpp  formatfactory.h  iformat.h
src/formats/common/: vcarddata.cpp  vcarddata.h
src/formats/files/: fileformat.cpp  fileformat.h  mpbfile.cpp  mpbfile.h  udxfile.cpp  udxfile.h  vcfdirectory.cpp  vcffile.cpp  vcffile.h
testdata/: contacts.xml  csv_gen.csv  csv_gen.vcf  csv_gen_nonlatin.csv  custom_nonlatin_a8.vcf  empty.mpb  enc_koi8_cyr.vcf  enc_utf8_cyr.vcf  explay_bm50.csv  semicolon.vcf  two_records.udx  vcard30_rfc2426.vcf
tests/: carddav-nextcloud-get  carddav-owncloud-get.bat  castxmlcall  diff_ui
tests/UrlParsingMethodsTest/: main.cpp
translations/: CMakeLists.txt  README.tr  doublecontact_de.ts  doublecontact_el.ts  doublecontact_en_GB.ts  doublecontact_et.ts  doublecontact_fr.ts  doublecontact_fr_CH.ts  doublecontact_ie.ts  doublecontact_nb_NO.ts  doublecontact_nl.ts  doublecontact_nl_NL.ts  doublecontact_pl.ts  doublecontact_pt.ts  doublecontact_pt_BR.ts  doublecontact_ru_RU.ts  doublecontact_ta.ts  doublecontact_uk_UA.ts  doublecontact_zh_Hans.ts  doublecontact_zh_Hant.ts  iso639-1.utf8
