add_library(S_CORE OBJECT
 contactlist.cpp
 globals.cpp
 languagemanager.cpp
 formats/formatfactory.cpp
 formats/common/vcarddata.cpp
 formats/files/csvfile.cpp
 formats/files/fileformat.cpp
 formats/files/mpbfile.cpp
 formats/files/udxfile.cpp
 formats/files/vcfdirectory.cpp
 formats/files/vcffile.cpp
)
